new mongo uri added

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/Emotiva
+# MONGO_URI=mongodb://localhost:27017/Emotiva
+MONGO_URI=mongodb+srv://sudharsan:sudhars37@emotivadb.tqq8e.mongodb.net/
